<resources>
    <!-- general !-->
    <string name="app_name">A.U. Finance</string>
    <string name="au">A.U.</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="go">Go</string>

    <!-- PIN Form !-->
    <string name="pin_entry">Enter a PIN: </string>
    <string name="pin_confirm">Confirm PIN: </string>
    <string name="pin_label">PIN: </string>
    <string name="current_pin">Current PIN:</string>
    <string name="new_pin">New PIN:</string>

    <!-- Navigation !-->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_recent_transactions">Recent Transactions</string>
    <string name="nav_budgets">Budgets</string>

    <!-- Options Menu !-->
    <string name="add_item">Add Item</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="add_budget">Add Budget</string>

    <!-- Add Transaction Form !-->
    <string name="transaction_paid_to">Paid To:</string>
    <string name="transaction_value">Amount:</string>
    <string name="transaction_description">Description:</string>
    <string name="transaction_type">Type:</string>
    <string name="transaction_date">Date:</string>
    <string name="transaction_select_date">Select Date</string>
    <string name="transaction_budget">Budget:</string>

    <!-- Add Budget Form !-->
    <string name="budget_name">Budget Name:</string>
    <string name="budget_amount">Amount:</string>
    <string name="budget_type">Type:</string>
    <string name="budget_colour">Colour:</string>
    <string name="budget_select_colour">Select Colour</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Main Fragment !-->
    <string name="main_welcome_back">Welcome Back!</string>
    <string name="main_your_budgets">Your Budgets</string>
    <string name="main_recent_transactions">Recent Transactions</string>

    <!-- Edit Transaction Form !-->
    <string name="edit_transaction">Edit Transaction</string>

    <!-- Edit Budget Form !-->
    <string name="edit_budget">Edit Budget</string>
    <string name="budget_delete">N.B. Deleting a budget deletes all transactions
                                associated with the budget.</string>

    <!-- Settings !-->
    <string name="settings">Settings</string>
    <string name="change_pin">Change PIN</string>

    <!-- History -->
    <string name="history">History</string>
    <string name="history_description">Select a start and end date to show transactions from.</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="empty_view_text">No items</string>
</resources>
