<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alex_.project.EditBudgetActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbarBackground"
        android:elevation="2dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dorsa_regular"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/toolbarText"
            android:textSize="50sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_budget"
            android:textAppearance="@style/titleText"
            android:textColor="@color/defaultText"
            android:padding="10dp"/>
    </LinearLayout>

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:gravity="center_horizontal">
        <TableRow
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:textColor="@color/defaultText"
                android:text="@string/budget_name"
                android:padding="8dp"
                android:textAlignment="viewStart"/>
            <EditText
                android:id="@+id/name"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:inputType="text"
                android:textColor="@color/defaultText"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:padding="8dp"
                android:maxLength="25"/>
        </TableRow>
        <TableRow
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/amountLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:textColor="@color/defaultText"
                android:text="@string/budget_amount"
                android:padding="8dp"
                android:textAlignment="viewStart"/>
            <EditText
                android:id="@+id/amount"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:inputType="numberDecimal"
                android:textColor="@color/defaultText"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:padding="8dp" />
        </TableRow>
        <TableRow
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/typeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:textColor="@color/defaultText"
                android:text="@string/transaction_type"
                android:padding="8dp"
                android:textAlignment="viewStart"/>
            <Spinner
                android:id="@+id/type"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:textColor="@color/defaultText"
                android:padding="12dp" />
        </TableRow>
        <TableRow
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/colourLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:textColor="@color/defaultText"
                android:text="@string/budget_colour"
                android:padding="8dp"
                android:textAlignment="viewStart"/>
            <EditText
                android:id="@+id/colour"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="date"
                android:hint="@string/budget_select_colour"
                android:fontFamily="@font/raleway_light"
                android:textColor="@color/defaultText"
                android:textSize="15sp"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonBackground"
            android:textColor="@color/buttonText"
            android:text="@string/submit"
            android:fontFamily="@font/raleway_light"
            android:textSize="16sp"
            android:padding="10dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonBackground"
            android:textColor="@color/buttonText"
            android:text="@string/delete"
            android:fontFamily="@font/raleway_light"
            android:textSize="16sp"
            android:padding="10dp"
            android:textAllCaps="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:fontFamily="@font/raleway_light"
            android:textColor="@color/transactionWithdrawal"
            android:text="@string/budget_delete"/>
    </LinearLayout>

</LinearLayout>