<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_border"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/history"
            android:textAppearance="@style/titleText"
            android:textColor="@color/defaultTextLight" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/history_description"
            android:textAppearance="@style/descTextInGrid"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            />
        <TableRow
            android:gravity="center">
            <TextView
                android:labelFor="@id/startDate"
                android:text="@string/start_date"
                android:textAppearance="@style/descTextInGrid"/>
            <EditText
                android:id="@+id/startDate"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="date"
                android:hint="@string/start_date"
                android:textAppearance="@style/descTextInGrid"
                android:autofillHints="@string/start_date" />
        </TableRow>
        <TableRow
            android:gravity="center">
            <TextView
                android:labelFor="@id/endDate"
                android:text="@string/end_date"
                android:textAppearance="@style/descTextInGrid"/>
            <EditText
                android:id="@+id/endDate"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="date"
                android:hint="@string/end_date"
                android:textAppearance="@style/descTextInGrid"
                android:autofillHints="@string/end_date" />
        </TableRow>
        <TableRow
            android:gravity="center"
            android:paddingTop="5dp">
            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonBackground"
                android:textColor="@color/buttonText"
                android:text="@string/go"
                android:fontFamily="@font/raleway_light"
                android:textSize="16sp"
                android:padding="5dp"
                android:textAllCaps="false" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ScrollView>
</LinearLayout>