<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alex_.project.AddTransaction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_transaction"
            android:textAppearance="@style/titleText"
            android:textColor="@color/defaultText"
            android:padding="10dp"/>
    </LinearLayout>

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:padding="10dp">
        <TableRow
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/paidToLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:textColor="@color/defaultText"
                android:text="@string/transaction_paid_to"
                android:padding="8dp"
                android:textAlignment="viewStart"/>
            <EditText
                android:id="@+id/paidTo"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:inputType="text"
                android:textColor="@color/defaultText"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:padding="8dp"
                android:maxLength="20"/>
        </TableRow>

        <TableRow
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <TextView
                android:id="@+id/valueLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:padding="8dp"
                android:text="@string/transaction_value"
                android:textAlignment="viewStart"
                android:textColor="@color/defaultText"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/value"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:textColor="@color/defaultText"
                android:textSize="15sp" />
        </TableRow>
        <TableRow
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:textColor="@color/defaultText"
                android:text="@string/transaction_description"
                android:padding="8dp"
                android:textAlignment="viewStart"/>
            <EditText
                android:id="@+id/description"
                android:layout_height="wrap_content"
                android:layout_width="50dp"
                android:inputType="textAutoCorrect"
                android:textColor="@color/defaultText"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:padding="8dp"
                android:maxLength="50"/>
        </TableRow>
        <TableRow
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/typeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:textColor="@color/defaultText"
                android:text="@string/transaction_type"
                android:padding="8dp"
                android:textAlignment="viewStart"/>
            <Spinner
                android:id="@+id/type"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:textColor="@color/defaultText"
                android:padding="12dp" />
        </TableRow>
        <TableRow
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:textColor="@color/defaultText"
                android:text="@string/transaction_date"
                android:padding="8dp"
                android:textAlignment="viewStart"/>
            <EditText
                android:id="@+id/date"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="date"
                android:hint="@string/transaction_select_date"
                android:fontFamily="@font/raleway_light"
                android:textColor="@color/defaultText"
                android:textSize="15sp"/>
        </TableRow>
        <TableRow
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center">
            <TextView
                android:id="@+id/budgetLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:textColor="@color/defaultText"
                android:text="@string/transaction_budget"
                android:padding="8dp"
                android:textAlignment="viewStart"/>
            <Spinner
                android:id="@+id/budget"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:textSize="15sp"
                android:textColor="@color/defaultText"
                android:padding="12dp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonBackground"
            android:textColor="@color/buttonText"
            android:text="@string/submit"
            android:fontFamily="@font/raleway_light"
            android:textSize="16sp"
            android:padding="10dp"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>